--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-img">
         <div class="header-container">
              <div class="menu">
                 <div class="logo">tajam</div>
@@ -171,7 +170,7 @@
                             <input type="text" class="contacts-input" placeholder="Email">
                             <input type="text" class="contacts-input" placeholder="Subject">
                             <textarea name="" id="" cols="30" rows="10" class="contacts-textarea" placeholder="Your Massage"></textarea>
-                            <button class="contacts-btn"></button>
+                            <button class="contacts-btn">SUBMIT</button>
                         </form>
                 </div>
                 <div class="contacts-items">
