--- a/index.html
+++ b/index.html
@@ -179,5 +179,41 @@
                 </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-items">
+                <div class="footer-items-block">
+                        <div class="footer-blocks">
+                                <img src="/img/logo_footer.png" alt="" class="footer-logo">
+                            <p class="footer-p">lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit</p>
+                        </div>
+                        <div class="footer-blocks">
+                            <p class="footer-title">OUR STUDIO</p>
+                            <p class="footer-text-block">Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat
+                                11480 - Indonesia</p>
+                            <p class="footer-text-block">(+62) 21-2224 3333</p>
+                        </div>
+                        <div class="footer-blocks">
+                            <p class="footer-title">STAY IN TOUCH</p>
+                            <div class="footer-sub">
+                                <form action="" class="footer-form">
+                                    <input type="text" class="footer-input" placeholder="Subscribe our newsletter">
+                                </form>
+                            </div>
+                        </div>
+                </div>
+            </div>
+            <div class="footer-items-menu-copy">
+                <div class="footer-menu">
+                    <ul class="footer-ul">
+                        <li><a href="#">HELP</a></li>
+                        <li><a href="#">TERMS & CONDITION</a></li>
+                        <li><a href="#">PRIVACY</a></li>
+                    </ul>
+                </div>
+                <div class="footer-copy"><span>Copyright © 2015 - Tajem Creative</span></div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
