--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="header-container">
              <div class="menu">
-                <div class="logo">tajam</div>
+                <div class="logo"><img src="/img/logo_footer.png" alt=""></div>
                 <ul class="nav">
                     <li class="nav-li"><a href="#" class="nav-a">HOME</a></li>
                     <li class="nav-li"><a href="#" class="nav-a">ABOUT</a></li>
@@ -196,9 +196,7 @@
                         <div class="footer-blocks">
                             <p class="footer-title">STAY IN TOUCH</p>
                             <div class="footer-sub">
-                                <form action="" class="footer-form">
-                                    <input type="text" class="footer-input" placeholder="Subscribe our newsletter">
-                                </form>
+                                <input type="text" class="footer-input" placeholder="Subscribe our newsletter">
                             </div>
                         </div>
                 </div>
